classDiagram
    direction TB

%% Interfaces
    class SaleableItem {
        <<interface>>
        +sellItem()
        +getPrice() double
    }

    class Serializable {
        <<interface>>
    }

%% Base Entity
    class ProductEntity {
        <<abstract>>
        -Long id
        +getId() Long
        +setId(Long)
        +getProductType() String
        +getPrice() double
        +sellItem()
    }

    ProductEntity ..|> SaleableItem
    ProductEntity ..|> Serializable

%% Inheritance: Publications
    class PublicationEntity {
        <<abstract>>
        -String title
        -double price
        -int copies
        +getTitle() String
        +getPrice() double
        +getCopies() int
        +setCopies(int)
    }

    class BookEntity {
        -String author
        -String isbn
        +getAuthor() String
        +setAuthor(String)
    }

    class MagazineEntity {
        -int orderQty
        -LocalDateTime currentIssue
    }

    class DiscMagEntity {
        -boolean hasDisc
    }

    ProductEntity <|-- PublicationEntity
    PublicationEntity <|-- BookEntity
    PublicationEntity <|-- MagazineEntity
    MagazineEntity <|-- DiscMagEntity

%% Inheritance: Ticket
    class TicketEntity {
        -String description
        -double ticketPrice
        -String eventName
        -LocalDateTime eventDate
        +getDescription() String
        +getPrice() double
    }

    ProductEntity <|-- TicketEntity

%% Inheritance: Musical Instruments
    class MusicalInstrumentEntity {
        -String material
        -String brand
    }

    class GuitarEntity {
        -Integer numberOfStrings
        -String guitarType
    }

    class DrumEntity {
        -String drumType
        -Integer diameterInInches
    }

    ProductEntity <|-- MusicalInstrumentEntity
    MusicalInstrumentEntity <|-- GuitarEntity
    MusicalInstrumentEntity <|-- DrumEntity

%% Cart
    class CartEntity {
        -Long id
        -Set~ProductEntity~ products
        +addProduct(ProductEntity)
        +getProducts() Set~ProductEntity~
    }

%% NEW: Order
    class OrderEntity {
        -Long id
        -double totalAmount
        -LocalDateTime orderDate
        -Set~ProductEntity~ products
        +getTotalAmount() double
        +getOrderDate() LocalDateTime
        +getProducts() Set~ProductEntity~
    }

%% Relationships (Lab 2 requirement)
    CartEntity "*" -- "*" ProductEntity : cart_products
    OrderEntity "*" -- "*" ProductEntity : order_products
